# dotfiles

./: .claude-project  .dependency-map.yml  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  .sops.yaml.example  .statix.toml  ACHIEVEMENT_REPORT.md  ACTUAL_INSTALLED_APPS_ANALYSIS.md  AVAILABLE_NIXPKGS_APPS.md  CLAUDE.md  CLAUDE_COMMAND_WORKAROUND.md  DOCS_ORGANIZATION_COMPLETE.md  DOTFILES_DISCOVERY.md  DOTFILES_NIX_MIGRATION.md  EXECUTE_DARWIN_REBUILD_CORRECT.md  EXECUTE_PHASE_4_5_6.md  FIX_NIX_CONFIG.md  HANDOVER_DOCUMENT.md  Justfile  LICENSE  MODERN_CLI_INTEGRATION_SUMMARY.md  PACKAGE_MANAGER_INTEGRATION.md  PHASE5_IMPLEMENTATION_COMPLETE.md  PHASE6_DISCOVERY_REPORT.md  PHASE6_SCRIPT_NIX_INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START_MODERN_CLI.md  README.md  RESTRICTED_MODE_SOLUTIONS.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  apple-silicon-migration.md  backup.sh  check-ci.sh  downloaded.md  flake.nix  (+12 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: cache-config.yml  dependabot.yml  matrix-template.yml
archive/: GITHUB_FULL_INTEGRATION_PLAN.md  MACOS_USERNAME_CHANGE_GUIDE.md  MACOS_USERNAME_CHANGE_GUIDE_DETAILED.md  package-optimization-20250618_151817.md
configs/: .gitconfig.example
docs/: .gitignore  AEROSPACE_MIGRATION.md  APPLE_CONTAINER_MIGRATION.md  ARCHITECTURE_REVIEW_PHASE5.md  BROWSER_MCP_SETUP.md  CHEATSHEET.md  CLEANUP_ANALYSIS_REPORT.md  CONFIGURATION_INTEGRATION_PLAN.md  DEVELOPMENT_ENVIRONMENT_GUIDE.md  DEVELOPMENT_ROADMAP_16_WEEKS.md  DOTFILES_DISCOVERY.md  ENCRYPTION_STRATEGY_GUIDE.md  HOMEBREW_ANALYSIS.md  HOMELAB.md  IMPLEMENTATION_ROADMAP_PHASE5.md  IMPLEMENTATION_SUMMARY.md  JUPYTER_DEVELOPMENT_ENVIRONMENT_PLAN.md  MCP_SETUP.md  MULTI_PLATFORM_ARCHITECTURE.md  NEXT_STEPS.md  NIXOS_DUALBOOT.md  NIX_DARWIN_WARNINGS.md  NIX_LIBRARY.md  NIX_LIBRARY_IMPLEMENTATION_STATUS.md  NIX_MIGRATION_PHASES.md  NIX_MIGRATION_STRATEGY.md  NIX_QUICK_START.md  Next_Step.md  PACKAGE_MANAGEMENT_OPTIMIZATION.md  PHASE3_MASTER_STATUS.md  PHASE3_TASK_3_1_SPECIFICATION.md  PHASE4_SYSTEM_OPTIMIZATION_SUMMARY.md  PHASE4_TASK_4_3_COMPLETION_REPORT.md  PHASE4_TASK_4_3_SPECIFICATION.md  PHASE5_MODERN_CLI_COMPLETE_GUIDE.md  PHASE5_MODERN_CLI_INTEGRATION.md  PHASE5_SPECIFICATION.md  PHASE5_TASK_5_6_SPECIFICATION.md  PHASE6_ADVANCED_INTEGRATION_PLAN.md  PHASE6_COMPLETION_REPORT.md  (+13 more)
migration-backups/: pip-packages-20250620_201046.txt
nix/: .envrc  .gitignore  POST_INSTALLATION_CHECK.sh  darwin.nix  flake.nix  home.nix  result  user.local.nix.example  user.nix
reports/: config-dependencies-20250616_120148.md  dependencies-check-20250618_022441.md  dependency-summary-20250616_085400.md  dependency-summary-20250616_120148.md  nix-dependencies-20250616_083055.md  package-optimization-20250702_193230.md  package-usage-20250616_085227.md  performance-analysis-20250616_085400.md  performance-analysis-20250616_120148.md  script-dependencies-20250616_120148.md  security-analysis-20250616_120148.md
scripts/: analyze-homebrew-nix-migration.sh  backup-keys-to-bitwarden.sh  backup.sh  bootstrap-linux.sh  bootstrap-wsl.sh  bootstrap.sh  capture-app-plist.py  check-ci.sh  check-dependencies.sh  ci-cd-optimizer.sh  cleanup-phase1.sh  complete-homebrew-migration-analysis.sh  consolidate-docs.sh  discover-unmanaged-apps.sh  dissolve-from-downloads.sh  enhanced-dependency-check.sh  fetch-age-key.sh  generate-health-dashboard.sh  install-mcp-packages.sh  install.sh  (+45 more)
templates/python-project/: pyproject.toml  shell.nix
templates/python/fastapi/: .pre-commit-config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  shell.nix  template-config.nix
templates/python/fastapi/tests/: test_main.py
templates/systems/rust-cli/: Cargo.toml  shell.nix  template-config.nix
templates/systems/rust-cli/src/: cli.rs  main.rs
(+676 files in other folders)
