[package]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Modern command-line application built with Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/{{PROJECT_NAME}}"
repository = "https://github.com/yourusername/{{PROJECT_NAME}}"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = "0.5"

[features]
default = []
json = ["serde_json"]
async = ["tokio"]

[[bin]]
name = "{{PROJECT_NAME}}"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]